--- a/loading.html
+++ b/loading.html
@@ -231,17 +231,27 @@
         </p>
     </div>
     
-    <div class="version" id="app-version">v1.0.0</div>
+    <div class="version" id="app-version">v1.0.10</div>
 
     <script>
-        // Tentar obter versão do package.json via require (se disponível)
+        // Tentar obter versão do Electron
         try {
             if (typeof require !== 'undefined') {
-                const { version } = require('./package.json');
-                document.getElementById('app-version').textContent = 'v' + version;
+                const { app } = require('electron').remote || require('@electron/remote');
+                if (app) {
+                    const version = app.getVersion();
+                    document.getElementById('app-version').textContent = 'v' + version;
+                }
             }
         } catch (e) {
-            // Manter versão padrão se falhar
+            // Tentar via package.json
+            try {
+                const { version } = require('./package.json');
+                document.getElementById('app-version').textContent = 'v' + version;
+            } catch (err) {
+                // Manter versão padrão se falhar
+                console.log('Não foi possível obter versão:', err);
+            }
         }
     </script>
     <script>
